<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/truck"
        android:scaleType="fitXY"
        android:alpha=".3"
        android:background="@color/login_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/login_background_layer">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/toolbar_color">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appTitle"
                android:layout_gravity="left|center"
                android:layout_marginLeft="30dp"
                android:id="@+id/title"
                android:transitionName="@string/title_transitionName"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </FrameLayout>



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:hint="@string/username"
            android:transitionName="@string/username_transitionName"
            android:id="@+id/username"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:hint="@string/firstName"
            android:id="@+id/first_name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:hint="@string/lastName"
            android:id="@+id/last_name"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:transitionName="@string/password_transitionName"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:id="@+id/password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center"
            android:hint="@string/confirm"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:id="@+id/confirm"/>

        <com.rey.material.widget.Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:transitionName="@string/button_transitionName"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn"
            android:id="@+id/registerBtn"
            android:gravity="center"
            android:textColor="@color/white"
            android:visibility="visible"
            app:rd_maskType="rectangle"
            app:rd_enable="true"
            app:rd_delayClick="untilRelease"
            app:rd_cornerRadius="8dp"
            app:rd_rippleColor="@color/button_ripple_color"/>


    </LinearLayout>

</FrameLayout>