<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/toolbar_color"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appTitle"
            android:layout_gravity="left|center"
            android:layout_marginLeft="30dp"
            android:id="@+id/title"
            android:transitionName="@string/title_transitionName"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <com.rey.material.widget.Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginRight="5dp"
            android:text="@string/logOut"
            android:id="@+id/logOut"
            android:background="@color/full_transparent"
            app:rd_enable="true"
            app:rd_delayClick="untilRelease"
            app:rd_rippleColor="@color/button_ripple_color"
            />
    </FrameLayout>

    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.test.gpstracker.MapsActivity" />
</LinearLayout>
